--- a/themes/t4mag/layouts/partials/featured-post.html
+++ b/themes/t4mag/layouts/partials/featured-post.html
@@ -103,10 +103,7 @@
 												</span>
 											</li>
 											<li>
-												<span class="rt-meta">
-													<i class="far fa-calendar-alt icon"></i>
-													DECEMBER 9, 2022
-												</span>
+												{{- partial "published-date.html" . -}}
 											</li>
 										</ul>
 									</div>
@@ -138,10 +135,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -168,10 +162,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -198,10 +189,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -234,10 +222,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -264,10 +249,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -294,10 +276,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -381,10 +360,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -411,10 +387,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -441,10 +414,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -477,10 +447,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -507,10 +474,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -537,10 +501,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -625,10 +586,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -655,10 +613,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -685,10 +640,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -721,10 +673,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -751,10 +700,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -781,10 +727,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -869,10 +812,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -899,10 +839,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -929,10 +866,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -965,10 +899,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -995,10 +926,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
@@ -1025,10 +953,7 @@
 													After Moon They Land CloseSpace Really?
 												</a>
 											</h4>
-											<span class="rt-meta">
-												<i class="far fa-calendar-alt icon"></i>
-												DECEMBER 9, 2022
-											</span>
+											{{- partial "published-date.html" . -}}
 										</div>
 									</div>
 								</div>
