--- a/themes/t4mag/layouts/partials/hot.html
+++ b/themes/t4mag/layouts/partials/hot.html
@@ -77,23 +77,39 @@
 								aria-labelledby="menu-1-tab"
 							>
 								<div class="row gutter-24">
+									{{ $counter := 0 }}
+									{{ $v1 := where .Site.Pages "Params.category" "=" "linux" }}
+									{{ $v2 := where .Site.Pages "Params.tags" "intersect" (slice "linux") }}
+									{{ $filtered := $v1 | union $v2 }}
+									{{ range first 1 $filtered }}
+									{{ $counter = add $counter 1 }}
+									{{ if (eq $counter 1) }}
+								
 									<div class="col-lg-7">
 										<div class="rt-post-overlay rt-post-overlay-lg">
 											<div class="post-img">
 												<a href="{{ .Permalink }}" class="img-link">
+													{{ with .Param "featured_image" }}
 													<img
-														src="/images/gallery/post-xl_2.jpg"
-														alt="post-xl-2"
+														src="{{ . }}" alt="{{ $.Title }}"
 														width="900"
 														height="600"
 													/>
+													{{ else }}
+													<img
+														src="/images/gallery/post-lg_5.jpg"
+														alt="{{ $.Title }}"
+														width="900"
+														height="600"
+													/>
+													{{ end }}
 												</a>
 											</div>
 											<div class="post-content">
-												<a href="life-style.html" class="world">World</a>
-												<h3 class="post-title bold-underline">
+												<a href="{{ $.Site.BaseURL }}category/{{ .Params.category }}" class="{{ .Params.category }}">{{ .Params.category }}</a>
+												<h3 class="post-title">
 													<a href="{{ .Permalink }}">
-														African Nations Are Strugling To Save Their Wildlife
+														{{ .Page.Title }}
 													</a>
 												</h3>
 
@@ -103,15 +119,12 @@
 															<span class="rt-meta">
 																by
 																<a href="author.html" class="name"
-																	>Willum Skeem</a
+																	>T4Technow</a
 																>
 															</span>
 														</li>
 														<li>
-															<span class="rt-meta">
-																<i class="far fa-calendar-alt icon"></i>
-																DECEMBER 9, 2022
-															</span>
+															{{- partial "published-date.html" . -}}
 														</li>
 														<li>
 															<span class="rt-meta">
@@ -124,14 +137,15 @@
 											</div>
 										</div>
 									</div>
-
+									{{ end }}
+									{{ end }}
 									<div class="col-lg-5">
-										<div class="row gutter-24"> 
+										<div class="row gutter-24">
+											
+											{{ range first 5 $filtered }}
+											{{ $counter = add $counter 1 }}
 
-											{{ $v1 := where .Site.Pages "Params.category" "=" "linux" }}
-											{{ $v2 := where .Site.Pages "Params.tags" "intersect" (slice "linux") }}
-											{{ $filtered := $v1 | union $v2 }}
-											{{ range $filtered }}
+											{{ if (gt $counter 2) }}
 											<div class="col-12">
 												<div class="rt-post post-sm style-2">
 													<div class="post-content">
@@ -145,10 +159,7 @@
 															</a>
 														</h4>
 														<span class="rt-meta">
-															{{ $dateTime := .PublishDate.Format "2006-01-02" }} 
-															{{ $dateFormat := .Site.Params.dateFormat | default "January 2,2006" }}
-															<i class="far fa-calendar-alt icon"></i>
-															{{ .PublishDate.Format $dateFormat }}
+															{{- partial "published-date.html" . -}}
 														</span>
 													</div>
 													<div class="post-img">
@@ -171,6 +182,7 @@
 													</div>
 												</div>
 											</div>
+											{{ end }}
 											{{ end }}
 										</div>
 									</div>
@@ -185,23 +197,39 @@
 								aria-labelledby="menu-2-tab"
 							>
 								<div class="row gutter-24">
+									{{ $counter := 0 }}
+									{{ $v1 := where .Site.Pages "Params.category" "=" "windows" }}
+									{{ $v2 := where .Site.Pages "Params.tags" "intersect" (slice "windows") }}
+									{{ $filtered := $v1 | union $v2 }}
+									{{ range first 1 $filtered }}
+									{{ $counter = add $counter 1 }}
+									{{ if (eq $counter 1) }}
+								
 									<div class="col-lg-7">
 										<div class="rt-post-overlay rt-post-overlay-lg">
 											<div class="post-img">
 												<a href="{{ .Permalink }}" class="img-link">
+													{{ with .Param "featured_image" }}
 													<img
-														src="/images/gallery/post-xl_2.jpg"
-														alt="post-xl_2"
+														src="{{ . }}" alt="{{ $.Title }}"
 														width="900"
 														height="600"
 													/>
+													{{ else }}
+													<img
+														src="/images/gallery/post-lg_2.jpg"
+														alt="{{ $.Title }}"
+														width="900"
+														height="600"
+													/>
+													{{ end }}
 												</a>
 											</div>
 											<div class="post-content">
-												<a href="life-style.html" class="world">World</a>
+												<a href="{{ $.Site.BaseURL }}category/{{ .Params.category }}" class="{{ .Params.category }}">{{ .Params.category }}</a>
 												<h3 class="post-title">
 													<a href="{{ .Permalink }}">
-														African Nations Are Strugling To Save Their Wildlife
+														{{ .Page.Title }}
 													</a>
 												</h3>
 
@@ -211,15 +239,12 @@
 															<span class="rt-meta">
 																by
 																<a href="author.html" class="name"
-																	>Willum Skeem</a
+																	>T4Technow</a
 																>
 															</span>
 														</li>
 														<li>
-															<span class="rt-meta">
-																<i class="far fa-calendar-alt icon"></i>
-																DECEMBER 9, 2022
-															</span>
+															{{- partial "published-date.html" . -}}
 														</li>
 														<li>
 															<span class="rt-meta">
@@ -232,13 +257,15 @@
 											</div>
 										</div>
 									</div>
-
+									{{ end }}
+									{{ end }}
 									<div class="col-lg-5">
 										<div class="row gutter-24">
-											{{ $v1 := where .Site.Pages "Params.category" "=" "windows" }}
-											{{ $v2 := where .Site.Pages "Params.tags" "intersect" (slice "windows") }}
-											{{ $filtered := $v1 | union $v2 }}
-											{{ range $filtered }}
+											
+											{{ range first 5 $filtered }}
+											{{ $counter = add $counter 1 }}
+
+											{{ if (gt $counter 2) }}
 											<div class="col-12">
 												<div class="rt-post post-sm style-2">
 													<div class="post-content">
@@ -252,10 +279,7 @@
 															</a>
 														</h4>
 														<span class="rt-meta">
-															{{ $dateTime := .PublishDate.Format "2006-01-02" }} 
-															{{ $dateFormat := .Site.Params.dateFormat | default "January 2,2006" }}
-															<i class="far fa-calendar-alt icon"></i>
-															{{ .PublishDate.Format $dateFormat }}
+															{{- partial "published-date.html" . -}}
 														</span>
 													</div>
 													<div class="post-img">
@@ -278,6 +302,7 @@
 													</div>
 												</div>
 											</div>
+											{{ end }}
 											{{ end }}
 										</div>
 									</div>
@@ -292,23 +317,39 @@
 								aria-labelledby="menu-3-tab"
 							>
 								<div class="row gutter-24">
+									{{ $counter := 0 }}
+									{{ $v1 := where .Site.Pages "Params.category" "=" "android" }}
+									{{ $v2 := where .Site.Pages "Params.tags" "intersect" (slice "android") }}
+									{{ $filtered := $v1 | union $v2 }}
+									{{ range first 1 $filtered }}
+									{{ $counter = add $counter 1 }}
+									{{ if (eq $counter 1) }}
+								
 									<div class="col-lg-7">
 										<div class="rt-post-overlay rt-post-overlay-lg">
 											<div class="post-img">
 												<a href="{{ .Permalink }}" class="img-link">
+													{{ with .Param "featured_image" }}
 													<img
-														src="/images/gallery/post-xl_2.jpg"
-														alt="post-xl-2"
+														src="{{ . }}" alt="{{ $.Title }}"
 														width="900"
 														height="600"
 													/>
+													{{ else }}
+													<img
+														src="/images/gallery/post-lg_2.jpg"
+														alt="{{ $.Title }}"
+														width="900"
+														height="600"
+													/>
+													{{ end }}
 												</a>
 											</div>
 											<div class="post-content">
-												<a href="life-style.html" class="world">World</a>
+												<a href="{{ $.Site.BaseURL }}category/{{ .Params.category }}" class="{{ .Params.category }}">{{ .Params.category }}</a>
 												<h3 class="post-title">
 													<a href="{{ .Permalink }}">
-														African Nations Are Strugling To Save Their Wildlife
+														{{ .Page.Title }}
 													</a>
 												</h3>
 
@@ -318,15 +359,12 @@
 															<span class="rt-meta">
 																by
 																<a href="author.html" class="name"
-																	>Willum Skeem</a
+																	>T4Technow</a
 																>
 															</span>
 														</li>
 														<li>
-															<span class="rt-meta">
-																<i class="far fa-calendar-alt icon"></i>
-																DECEMBER 9, 2022
-															</span>
+															{{- partial "published-date.html" . -}}
 														</li>
 														<li>
 															<span class="rt-meta">
@@ -339,13 +377,15 @@
 											</div>
 										</div>
 									</div>
-
+									{{ end }}
+									{{ end }}
 									<div class="col-lg-5">
 										<div class="row gutter-24">
-											{{ $v1 := where .Site.Pages "Params.category" "=" "android" }}
-											{{ $v2 := where .Site.Pages "Params.tags" "intersect" (slice "android") }}
-											{{ $filtered := $v1 | union $v2 }}
-											{{ range $filtered }}
+											
+											{{ range first 5 $filtered }}
+											{{ $counter = add $counter 1 }}
+
+											{{ if (gt $counter 2) }}
 											<div class="col-12">
 												<div class="rt-post post-sm style-2">
 													<div class="post-content">
@@ -359,10 +399,7 @@
 															</a>
 														</h4>
 														<span class="rt-meta">
-															{{ $dateTime := .PublishDate.Format "2006-01-02" }} 
-															{{ $dateFormat := .Site.Params.dateFormat | default "January 2,2006" }}
-															<i class="far fa-calendar-alt icon"></i>
-															{{ .PublishDate.Format $dateFormat }}
+															{{- partial "published-date.html" . -}}
 														</span>
 													</div>
 													<div class="post-img">
@@ -386,6 +423,7 @@
 												</div>
 											</div>
 											{{ end }}
+											{{ end }}
 										</div>
 									</div>
 								</div>
@@ -399,23 +437,39 @@
 								aria-labelledby="menu-4-tab"
 							>
 								<div class="row gutter-24">
+									{{ $counter := 0 }}
+									{{ $v1 := where .Site.Pages "Params.category" "=" "software" }}
+									{{ $v2 := where .Site.Pages "Params.tags" "intersect" (slice "software") }}
+									{{ $filtered := $v1 | union $v2 }}
+									{{ range first 1 $filtered }}
+									{{ $counter = add $counter 1 }}
+									{{ if (eq $counter 1) }}
+								
 									<div class="col-lg-7">
 										<div class="rt-post-overlay rt-post-overlay-lg">
 											<div class="post-img">
 												<a href="{{ .Permalink }}" class="img-link">
+													{{ with .Param "featured_image" }}
 													<img
-														src="/images/gallery/post-xl_2.jpg"
-														alt="post-xl-2"
+														src="{{ . }}" alt="{{ $.Title }}"
 														width="900"
 														height="600"
 													/>
+													{{ else }}
+													<img
+														src="/images/gallery/post-lg_2.jpg"
+														alt="{{ $.Title }}"
+														width="900"
+														height="600"
+													/>
+													{{ end }}
 												</a>
 											</div>
 											<div class="post-content">
-												<a href="life-style.html" class="world">World</a>
+												<a href="{{ $.Site.BaseURL }}category/{{ .Params.category }}" class="{{ .Params.category }}">{{ .Params.category }}</a>
 												<h3 class="post-title">
 													<a href="{{ .Permalink }}">
-														African Nations Are Strugling To Save Their Wildlife
+														{{ .Page.Title }}
 													</a>
 												</h3>
 
@@ -425,15 +479,12 @@
 															<span class="rt-meta">
 																by
 																<a href="author.html" class="name"
-																	>Willum Skeem</a
+																	>T4Technow</a
 																>
 															</span>
 														</li>
 														<li>
-															<span class="rt-meta">
-																<i class="far fa-calendar-alt icon"></i>
-																DECEMBER 9, 2022
-															</span>
+															{{- partial "published-date.html" . -}}
 														</li>
 														<li>
 															<span class="rt-meta">
@@ -446,13 +497,15 @@
 											</div>
 										</div>
 									</div>
-
+									{{ end }}
+									{{ end }}
 									<div class="col-lg-5">
 										<div class="row gutter-24">
-											{{ $v1 := where .Site.Pages "Params.category" "=" "android" }}
-											{{ $v2 := where .Site.Pages "Params.tags" "intersect" (slice "android") }}
-											{{ $filtered := $v1 | union $v2 }}
-											{{ range $filtered }}
+											
+											{{ range first 5 $filtered }}
+											{{ $counter = add $counter 1 }}
+
+											{{ if (gt $counter 2) }}
 											<div class="col-12">
 												<div class="rt-post post-sm style-2">
 													<div class="post-content">
@@ -466,10 +519,7 @@
 															</a>
 														</h4>
 														<span class="rt-meta">
-															{{ $dateTime := .PublishDate.Format "2006-01-02" }} 
-															{{ $dateFormat := .Site.Params.dateFormat | default "January 2,2006" }}
-															<i class="far fa-calendar-alt icon"></i>
-															{{ .PublishDate.Format $dateFormat }}
+															{{- partial "published-date.html" . -}}
 														</span>
 													</div>
 													<div class="post-img">
@@ -492,6 +542,7 @@
 													</div>
 												</div>
 											</div>
+											{{ end }}
 											{{ end }}
 										</div>
 									</div>
