--- a/themes/t4mag/layouts/partials/post-md.html
+++ b/themes/t4mag/layouts/partials/post-md.html
@@ -1,10 +1,15 @@
 <div class="wrap">
 	<h2 class="rt-section-heading">
-		<span class="rt-section-text">Life Style </span>
+		<span class="rt-section-text">Games </span>
 		<span class="rt-section-dot"></span>
 		<span class="rt-section-line"></span>
 	</h2>
 	<div class="row gutter-10">
+		{{ $p := where site.RegularPages "Type" "posts" }}
+		{{ $v1 := where $p "Params.category" "=" "games" }}
+		{{ $v2 := where $p "Params.tags" "intersect" (slice "games") }}
+		{{ $filter := $v1 | union $v2 }}
+		{{ range first 4 $filter }}
 		<div
 			class="col-lg-6 wow fadeInUp"
 			data-wow-delay="200ms"
@@ -12,19 +17,28 @@
 		>
 			<div class="rt-post-overlay rt-post-overlay-md">
 				<div class="post-img">
-					<a href="single-post1.html" class="img-link">
-						<img
-							src="/images/gallery/post-xl_4.jpg"
-							alt="post-xl_4"
-							width="900"
-							height="600"
-						/>
+					<a href="{{ .Permalink }}" class="img-link">
+						{{ with .Param "featured_image" }}
+							<img
+								src="{{ . }}" alt="{{ $.Title }}"
+								width="900"
+								height="600"
+							/>
+							{{ else }}
+							<img
+								src="/images/gallery/post-lg_5.jpg"
+								alt="{{ .Title }}"
+								width="900"
+								height="600"
+							/>
+						{{end}}	
+						
 					</a>
 				</div>
 				<div class="post-content">
 					<h3 class="post-title bold-underline">
-						<a href="single-post1.html">
-							Moon TheyLanding How are Main Close Space Really
+						<a href="{{ .Permalink }}">
+							{{ .Title }}
 						</a>
 					</h3>
 
@@ -33,14 +47,11 @@
 							<li>
 								<span class="rt-meta">
 									by
-									<a href="author.html" class="name">Willum Skeem</a>
+									<a href="author.html" class="name">T4Technow</a>
 								</span>
 							</li>
 							<li>
-								<span class="rt-meta">
-									<i class="far fa-calendar-alt icon"></i>
-									DECEMBER 9, 2022
-								</span>
+								{{- partial "published-date.html" . -}}
 							</li>
 						</ul>
 					</div>
@@ -48,138 +59,7 @@
 			</div>
 		</div>
 		<!-- end col -->
-
-		<div
-			class="col-lg-6 wow fadeInUp"
-			data-wow-delay="400ms"
-			data-wow-duration="800ms"
-		>
-			<div class="rt-post-overlay rt-post-overlay-md">
-				<div class="post-img">
-					<a href="single-post1.html" class="img-link">
-						<img
-							src="/images/gallery/post-xl_5.jpg"
-							alt="post-xl_5"
-							width="900"
-							height="600"
-						/>
-					</a>
-				</div>
-				<div class="post-content">
-					<h3 class="post-title bold-underline">
-						<a href="single-post1.html">
-							Moon TheyLanding How are Main Close Space Really
-						</a>
-					</h3>
-
-					<div class="post-meta">
-						<ul>
-							<li>
-								<span class="rt-meta">
-									by
-									<a href="author.html" class="name">Willum Skeem</a>
-								</span>
-							</li>
-							<li>
-								<span class="rt-meta">
-									<i class="far fa-calendar-alt icon"></i>
-									DECEMBER 9, 2022
-								</span>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- end col -->
-
-		<div
-			class="col-lg-6 wow fadeInUp"
-			data-wow-delay="600ms"
-			data-wow-duration="800ms"
-		>
-			<div class="rt-post-overlay rt-post-overlay-md">
-				<div class="post-img">
-					<a href="single-post1.html" class="img-link">
-						<img
-							src="/images/gallery/post-xl_6.jpg"
-							alt="post-xl_6"
-							width="900"
-							height="600"
-						/>
-					</a>
-				</div>
-				<div class="post-content">
-					<h3 class="post-title bold-underline">
-						<a href="single-post1.html">
-							Moon TheyLanding How are Main Close Space Really
-						</a>
-					</h3>
-
-					<div class="post-meta">
-						<ul>
-							<li>
-								<span class="rt-meta">
-									by
-									<a href="author.html" class="name">Willum Skeem</a>
-								</span>
-							</li>
-							<li>
-								<span class="rt-meta">
-									<i class="far fa-calendar-alt icon"></i>
-									DECEMBER 9, 2022
-								</span>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- end col -->
-
-		<div
-			class="col-lg-6 wow fadeInUp"
-			data-wow-delay="800ms"
-			data-wow-duration="800ms"
-		>
-			<div class="rt-post-overlay rt-post-overlay-md">
-				<div class="post-img">
-					<a href="single-post1.html" class="img-link">
-						<img
-							src="/images/gallery/post-xl_7.jpg"
-							alt="post-xl_7"
-							width="900"
-							height="600"
-						/>
-					</a>
-				</div>
-				<div class="post-content">
-					<h3 class="post-title bold-underline">
-						<a href="single-post1.html">
-							Moon TheyLanding How are Main Close Space Really
-						</a>
-					</h3>
-
-					<div class="post-meta">
-						<ul>
-							<li>
-								<span class="rt-meta">
-									by
-									<a href="author.html" class="name">Willum Skeem</a>
-								</span>
-							</li>
-							<li>
-								<span class="rt-meta">
-									<i class="far fa-calendar-alt icon"></i>
-									DECEMBER 9, 2022
-								</span>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- end col -->
+		{{ end }}
 	</div>
 	<!-- end inner row -->
 </div>
