--- a/themes/t4mag/layouts/partials/test.html
+++ b/themes/t4mag/layouts/partials/test.html
@@ -1,5 +1,10 @@
 <h2>test</h2>
-{{ $p := where site.RegularPages "Type" "posts" }} {{ $p = where $p
+<!-- {{ $p := where site.RegularPages "Type" "posts" }} {{ $p = where $p
 "Params.tags" "intersect" (slice "web") }} {{ range first 3 $p }}
 <h2><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
+{{ end }} -->
+
+
+{{ range $key, $value := .Site.Taxonomies.categories }}
+	<li><a href="{{ $.BaseURL  }}categories/{{ $key | urlize  }}">{{ $key | humanize }}</a> ({{ len $value }})</li>
 {{ end }}
