--- a/themes/t4mag/layouts/partials/upper-sidebar.html
+++ b/themes/t4mag/layouts/partials/upper-sidebar.html
@@ -1,6 +1,6 @@
 <div class="col-xl-3 col-lg-8 mx-auto sticky-coloum-item">
 	<div class="rt-sidebar sticky-wrap">
-		<div class="sidebar-wrap mb--40">
+		<!-- <div class="sidebar-wrap mb--40">
 			<h2 class="rt-section-heading style-2 mb--30">
 				<span class="rt-section-text">Stay Connected </span>
 				<span class="rt-section-dot"></span>
@@ -38,7 +38,7 @@
 					</a>
 				</li>
 			</ul>
-		</div>
+		</div> -->
 		<!-- end slidebar wrap  -->
 
 		<div class="sidebar-wrap mb--40">
@@ -48,110 +48,40 @@
 				<span class="rt-section-line"></span>
 			</h2>
 			<div class="post-list">
+				{{ range ( shuffle ( where .Site.RegularPages "Type" "posts" | first 4 )) }}
 				<div class="item">
 					<div class="rt-post post-sm style-1">
 						<div class="post-img">
-							<a href="single-post1.html">
-								<img
-									src="/images/gallery/post-sm_1.jpg"
-									alt="post"
+							<a href="{{ .Permalink }}">
+								{{ with .Param "featured_image" }}
+								<img 
+									src="{{ . }}" 
+									alt="{{ $.Title }}" 
 									width="100"
 									height="100"
 								/>
-							</a>
-						</div>
-						<div class="ms-4 post-content">
-							<a href="gaming.html" class="rt-post-cat-normal">Sports</a>
-							<h4 class="post-title">
-								<a href="single-post1.html">
-									Top Beste ampute are Speak Market.
-								</a>
-							</h4>
-							<span class="rt-meta">
-								<i class="far fa-calendar-alt icon"></i>
-								DECEMBER 9, 2022
-							</span>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<div class="rt-post post-sm style-1">
-						<div class="post-img">
-							<a href="single-post1.html">
+								{{ else }}
 								<img
 									src="/images/gallery/post-sm_2.jpg"
-									alt="post"
+									alt="{{ .Title }}"
 									width="100"
 									height="100"
 								/>
+								{{end}}
 							</a>
 						</div>
 						<div class="ms-4 post-content">
-							<a href="gaming.html" class="rt-post-cat-normal">Sports</a>
+							<a href="{{ $.Site.BaseURL }}category/{{ .Params.category }}" class="rt-post-cat-normal">{{ .Params.category }}</a>
 							<h4 class="post-title">
-								<a href="single-post1.html">
-									Top Beste ampute are Speak Market.
+								<a href="{{ .Permalink }}">
+									{{ .Title | truncate 25 }}
 								</a>
 							</h4>
-							<span class="rt-meta">
-								<i class="far fa-calendar-alt icon"></i>
-								DECEMBER 9, 2022
-							</span>
+							{{- partial "published-date.html" . -}}
 						</div>
 					</div>
 				</div>
-				<div class="item">
-					<div class="rt-post post-sm style-1">
-						<div class="post-img">
-							<a href="single-post1.html">
-								<img
-									src="/images/gallery/post-sm_3.jpg"
-									alt="post"
-									width="100"
-									height="100"
-								/>
-							</a>
-						</div>
-						<div class="ms-4 post-content">
-							<a href="gaming.html" class="rt-post-cat-normal">Sports</a>
-							<h4 class="post-title">
-								<a href="single-post1.html">
-									Top Beste ampute are Speak Market.
-								</a>
-							</h4>
-							<span class="rt-meta">
-								<i class="far fa-calendar-alt icon"></i>
-								DECEMBER 9, 2022
-							</span>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<div class="rt-post post-sm style-1">
-						<div class="post-img">
-							<a href="single-post1.html">
-								<img
-									src="/images/gallery/post-sm_4.jpg"
-									alt="post"
-									width="100"
-									height="100"
-								/>
-							</a>
-						</div>
-						<div class="ms-4 post-content">
-							<a href="gaming.html" class="rt-post-cat-normal">Sports</a>
-							<h4 class="post-title">
-								<a href="single-post1.html">
-									Top Beste ampute are Speak Market.
-								</a>
-							</h4>
-							<span class="rt-meta">
-								<i class="far fa-calendar-alt icon"></i>
-								DECEMBER 9, 2022
-							</span>
-						</div>
-					</div>
-				</div>
+				{{ end }}
 			</div>
 		</div>
 		<!-- end slidebar wrap  -->
@@ -172,8 +102,8 @@
 					</div>
 					<h3 class="title">
 						<a href="#">
-							The Most Powerful
-							<span>News & Magazine WP Theme</span>
+							A Friend
+							<span>For Your PC </span>
 						</a>
 					</h3>
 					<div class="btn-wrap">
