--- a/themes/t4mag/layouts/partials/header.html
+++ b/themes/t4mag/layouts/partials/header.html
@@ -120,27 +120,10 @@
 						<nav class="main-menu__nav">
 							<ul>
 								<li class="main-menu__nav_sub active">
-									<a class="animation" href="javascript:void(0)">Home</a>
+									<a class="animation" href="{{ .Site.BaseURL }}">Home</a>
 								</li>
 								<li class="main-menu__nav_sub list">
 									<a class="animation" href="javascript:void(0)">How To</a>
-									<ul class="main-menu__dropdown">
-										<li class="main-menu__nav_sub">
-											<a href="javascript:void(0)"> Post Layout </a>
-											<ul>
-												<li>
-													<a href="single-post1.html">Single Post 01</a>
-												</li>
-												<li>
-													<a href="single-post2.html">Single Post 02</a>
-												</li>
-												<li>
-													<a href="single-post3.html">Single Post 03</a>
-												</li>
-											</ul>
-										</li>
-										<li><a href="author.html">Author Deatils</a></li>
-									</ul>
 								</li>
 								<li class="main-menu__nav_sub list">
 									<a class="animation" href="javascript:void(0)">Categories </a>
@@ -162,10 +145,7 @@
 								</li>
 								<li class="main-menu__nav_sub list">
 									<a class="animation" href="javascript:void(0)">GitHub</a>
-									<ul class="main-menu__dropdown">
-										<li><a href="shop.html">Shop</a></li>
-										<li><a href="single-shop.html">Shop Deatils</a></li>
-									</ul>
+									
 								</li>
 							</ul>
 						</nav>
