--- a/themes/t4mag/layouts/partials/head.html
+++ b/themes/t4mag/layouts/partials/head.html
@@ -3,6 +3,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta property="og:image"  content="/images/logo/logo-dark.png">
 	{{ $title := print .Site.Title " | " .Title }} {{ if .IsHome }}{{ $title =
 	.Site.Title }}{{ end }}
 	<title>{{ $title }}</title>
