removed mobile top-bar

--- a/themes/t4mag/layouts/partials/mobile-header.html
+++ b/themes/t4mag/layouts/partials/mobile-header.html
@@ -1,23 +1,8 @@
-<div class="rt-mobile-header mobile-sticky-on">
+<div class="rt-mobile-header mobile-sticky">
 	<div id="mobile-sticky-placeholder"></div>
 	<!-- end mobile-sticky-placeholder -->
 
-	<div class="mobile-top-bar" id="mobile-top-bar">
-		<ul class="mobile-top-list">
-			<li>
-				<span class="rt-meta">
-					<i class="far fa-calendar-alt icon"></i>
-					<span class="currentDate">DECEMBER 9, 2022</span>
-				</span>
-			</li>
-			<li>
-				<span class="rt-meta">
-					<i class="fas fa-map-marker-alt icon"></i>
-					Chicago 12, Melborne City, USA
-				</span>
-			</li>
-		</ul>
-	</div>
+
 	<!-- end mobile-top-bar -->
 
 	<div class="mobile-menu-bar-wrap" id="mobile-menu-bar-wrap">
@@ -43,21 +28,9 @@
 			<div class="offscreen-navigation">
 				<nav class="menu-main-primary-container">
 					<ul class="menu">
-						<li class="list menu-item-has-children">
+						<li class="list">
 							<a class="animation" href="javascript:void(0)">Home</a>
-							<ul class="main-menu__dropdown sub-menu">
-								<li><a href="index.html">Home 01 - Main</a></li>
-								<li><a href="index2.html">Home 02 - Technology</a></li>
-								<li><a href="index3.html">Home 03 - Gaming</a></li>
-								<li>
-									<a href="index4.html">Home 04 - Illustration</a>
-								</li>
-								<li><a href="index5.html">Home 05 - Newspaper</a></li>
-								<li><a href="index6.html">Home 06 - Magazine</a></li>
-								<li><a href="index7.html">Home 07 - Sports</a></li>
-								<li><a href="index8.html">Home 08 - Travels</a></li>
-								<li><a href="index9.html">Home 09 - Fitness</a></li>
-							</ul>
+							
 						</li>
 						<li class="list menu-item-has-children">
 							<a class="animation" href="javascript:void(0)">How To</a>
