updated web fonts

--- a/themes/t4mag/layouts/partials/mobile-header.html
+++ b/themes/t4mag/layouts/partials/mobile-header.html
@@ -1,5 +1,5 @@
 <div class="rt-mobile-header mobile-sticky">
-	<div id="mobile-sticky-placeholder"></div>
+	<div id="mobile-sticky-placeholder" style="height: 60px;"></div>
 	<!-- end mobile-sticky-placeholder -->
 
 
