updated single page

--- a/themes/t4mag/layouts/partials/news-and-featured.html
+++ b/themes/t4mag/layouts/partials/news-and-featured.html
@@ -6,7 +6,7 @@
 			<!-- News Ends -->
 
 			<!-- sidebar starts -->
-			{{- partial "sidebar.html" . -}}
+			{{- partial "sidebar-lower.html" . -}}
 			<!-- sidebar ends -->
 		</div>
 
