--- a/themes/t4mag/layouts/partials/scripts.html
+++ b/themes/t4mag/layouts/partials/scripts.html
@@ -10,6 +10,7 @@
 <script src="/js/theia-sticky-sidebar.min.js"></script>
 <script src="/js/validator.min.js"></script>
 <script src="/js/tween-max.js"></script>
+<script src="/js/lazysizes.js"></script>
 <script src="/js/wow.min.js"></script>
 
 <!-- custom -->
