--- a/themes/t4mag/layouts/partials/sidebar/popular-circle.html
+++ b/themes/t4mag/layouts/partials/sidebar/popular-circle.html
@@ -1,44 +1,43 @@
-
-<div class="sidebar-wrap">
+<div class="sidebar-wrap mb--40">
     <h2 class="rt-section-heading style-2 mb--30">
         <span class="rt-section-text">Popular News </span>
         <span class="rt-section-dot"></span>
         <span class="rt-section-line"></span>
     </h2>
-    <div class="row rt-gutter-10">
-        {{ range ( shuffle ( where .Site.RegularPages "Type" "posts" | first 6 )) }}
-        <div class="col-6">
-            <div class="rt-post-grid post-grid-md popular grid-meta">
+    <div class="post-list">
+        {{ range ( shuffle ( where .Site.RegularPages "Type" "posts" | first 4 )) }}
+        <div class="item">
+            <div class="rt-post post-sm style-1">
                 <div class="post-img">
                     <a href="{{ .Permalink }}">
                         {{ with .Param "featured_image" }}
                         <img 
                             src="{{ . }}" 
                             alt="{{ $.Title }}" 
-                            width="343"
-                            height="250"
+                            width="100"
+                            height="100"
                         />
                         {{ else }}
                         <img
                             src="/images/gallery/post-sm_2.jpg"
                             alt="{{ .Title }}"
-                            width="343"
-                            height="250"
+                            width="100"
+                            height="100"
                         />
                         {{end}}
                     </a>
                 </div>
-                <div class="post-content">
+                <div class="ms-4 post-content">
                     <a href="{{ $.Site.BaseURL }}category/{{ .Params.category }}" class="rt-post-cat-normal">{{ .Params.category }}</a>
                     <h4 class="post-title">
-                        <a href="{{ .Permalink }}"> {{ .Title | truncate 25 }} </a>
+                        <a href="{{ .Permalink }}">
+                            {{ .Title | truncate 25 }}
+                        </a>
                     </h4>
                     {{- partial "published-date.html" . -}}
                 </div>
             </div>
         </div>
-        <!-- col-6 -->
         {{ end }}
     </div>
-    <!-- end row -->
 </div>
