--- a/themes/t4mag/layouts/partials/upper-sidebar.html
+++ b/themes/t4mag/layouts/partials/upper-sidebar.html
@@ -1,89 +1,7 @@
 <div class="col-xl-3 col-lg-8 mx-auto sticky-coloum-item">
 	<div class="rt-sidebar sticky-wrap">
-		<!-- <div class="sidebar-wrap mb--40">
-			<h2 class="rt-section-heading style-2 mb--30">
-				<span class="rt-section-text">Stay Connected </span>
-				<span class="rt-section-dot"></span>
-				<span class="rt-section-line"></span>
-			</h2>
-			<ul class="social-connection">
-				<li>
-					<a href="https://www.facebook.com/">
-						<i class="fab fa-facebook-f facebook"></i>
-						<span class="text"><span>15,985</span> Fans</span>
-					</a>
-				</li>
-				<li>
-					<a href="https://twitter.com/">
-						<i class="fab fa-twitter twitter"></i>
-						<span class="text"><span>20,751</span> Follower</span>
-					</a>
-				</li>
-				<li>
-					<a href="https://www.youtube.com/">
-						<i class="fab fa-youtube youtube"></i>
-						<span class="text"><span>35,999</span> Subscriber</span>
-					</a>
-				</li>
-				<li>
-					<a href="https://cloud.google.com/">
-						<i class="fas fa-cloud cloud"></i>
-						<span class="text"><span>35,999</span> Subscriber</span>
-					</a>
-				</li>
-				<li>
-					<a href="https://dribbble.com/">
-						<i class="fab fa-dribbble dribbble"></i>
-						<span class="text"><span>35,999</span> Subscriber</span>
-					</a>
-				</li>
-			</ul>
-		</div> -->
-		<!-- end slidebar wrap  -->
 
-		<div class="sidebar-wrap mb--40">
-			<h2 class="rt-section-heading style-2 mb--30">
-				<span class="rt-section-text">Popular News </span>
-				<span class="rt-section-dot"></span>
-				<span class="rt-section-line"></span>
-			</h2>
-			<div class="post-list">
-				{{ range ( shuffle ( where .Site.RegularPages "Type" "posts" | first 4 )) }}
-				<div class="item">
-					<div class="rt-post post-sm style-1">
-						<div class="post-img">
-							<a href="{{ .Permalink }}">
-								{{ with .Param "featured_image" }}
-								<img 
-									src="{{ . }}" 
-									alt="{{ $.Title }}" 
-									width="100"
-									height="100"
-								/>
-								{{ else }}
-								<img
-									src="/images/gallery/post-sm_2.jpg"
-									alt="{{ .Title }}"
-									width="100"
-									height="100"
-								/>
-								{{end}}
-							</a>
-						</div>
-						<div class="ms-4 post-content">
-							<a href="{{ $.Site.BaseURL }}category/{{ .Params.category }}" class="rt-post-cat-normal">{{ .Params.category }}</a>
-							<h4 class="post-title">
-								<a href="{{ .Permalink }}">
-									{{ .Title | truncate 25 }}
-								</a>
-							</h4>
-							{{- partial "published-date.html" . -}}
-						</div>
-					</div>
-				</div>
-				{{ end }}
-			</div>
-		</div>
+		{{ partial "sidebar/popular-circle.html" . }}
 		<!-- end slidebar wrap  -->
 
 		<div class="sidebar-wrap">
