updated single page

--- a/themes/t4mag/layouts/partials/ad-banner-1.html
+++ b/themes/t4mag/layouts/partials/ad-banner-1.html
@@ -4,7 +4,7 @@
 			<div class="col-12">
 				<div class="ad-banner-img">
 					<a href="#">
-						<img
+						<img class="lazyload"
 							src="/images/gallery/ad-banner_1.jpg"
 							alt="ad-banner"
 							width="1400"
