--- a/themes/t4mag/layouts/partials/ad-banner-3.html
+++ b/themes/t4mag/layouts/partials/ad-banner-3.html
@@ -1,6 +1,6 @@
 <div class="ad-banner-img">
     <a href="#">
-        <img
+        <img class="lazyload"
             src="/images/gallery/ad-banner_3.jpg"
             alt="ad-banner"
             width="960"
