--- a/themes/t4mag/layouts/partials/author-box.html
+++ b/themes/t4mag/layouts/partials/author-box.html
@@ -1,6 +1,6 @@
 <div class="author-box-style-1 mb--50">
     <div class="author-img">
-        <img
+        <img class="lazyload"
             src="media/gallery/author-img_1.jpg"
             alt="author-img_1"
             width="170"
