--- a/themes/t4mag/layouts/partials/feature-section-1.html
+++ b/themes/t4mag/layouts/partials/feature-section-1.html
@@ -15,9 +15,9 @@
 					<div class="post-img">
 						<a href="{{ .Page.RelPermalink }}">
 							{{ with .Param "featured_image" }}
-							<img src="{{ . }}" alt="{{ $.Title }}" width="100" height="100" />
+							<img class="lazyload" src="{{ . }}" alt="{{ $.Title }}" width="100" height="100" />
 							{{ else }}
-							<img
+							<img class="lazyload"
 								src="/images/gallery/post-sm_2.jpg"
 								alt="{{ $.Title }}"
 								width="100"
