--- a/themes/t4mag/layouts/partials/featured-post.html
+++ b/themes/t4mag/layouts/partials/featured-post.html
@@ -78,7 +78,7 @@
 							<div class="rt-post-overlay rt-post-overlay-md">
 								<div class="post-img">
 									<a href="single-post1.html" class="img-link">
-										<img
+										<img class="lazyload"
 											src="/images/gallery/post-xl_3.jpg"
 											alt="post-xl-3"
 											width="900"
@@ -118,7 +118,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-md_4.jpg"
 													alt="post"
 													width="343"
@@ -145,7 +145,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_7.jpg"
 													alt="post"
 													width="343"
@@ -172,7 +172,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_8.jpg"
 													alt="post"
 													width="343"
@@ -205,7 +205,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_9.jpg"
 													alt="post"
 													width="343"
@@ -232,7 +232,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_10.jpg"
 													alt="post"
 													width="343"
@@ -259,7 +259,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_11.jpg"
 													alt="post"
 													width="343"
@@ -301,7 +301,7 @@
 							<div class="rt-post-overlay rt-post-overlay-md">
 								<div class="post-img">
 									<a href="single-post1.html" class="img-link">
-										<img
+										<img class="lazyload"
 											src="/images/gallery/post-xl_3.jpg"
 											alt="post-xl-3"
 											width="900"
@@ -343,7 +343,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-md_4.jpg"
 													alt="post"
 													width="343"
@@ -370,7 +370,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_7.jpg"
 													alt="post"
 													width="343"
@@ -397,7 +397,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_8.jpg"
 													alt="post"
 													width="343"
@@ -430,7 +430,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_9.jpg"
 													alt="post"
 													width="343"
@@ -457,7 +457,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_10.jpg"
 													alt="post"
 													width="343"
@@ -484,7 +484,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_11.jpg"
 													alt="post"
 													width="343"
@@ -526,7 +526,7 @@
 							<div class="rt-post-overlay rt-post-overlay-md">
 								<div class="post-img">
 									<a href="single-post1.html" class="img-link">
-										<img
+										<img class="lazyload"
 											src="/images/gallery/post-xl_3.jpg"
 											alt="post-xl-3"
 											width="900"
@@ -569,7 +569,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-md_4.jpg"
 													alt="post"
 													width="343"
@@ -596,7 +596,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_7.jpg"
 													alt="post"
 													width="343"
@@ -623,7 +623,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_8.jpg"
 													alt="post"
 													width="343"
@@ -656,7 +656,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_9.jpg"
 													alt="post"
 													width="343"
@@ -683,7 +683,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_10.jpg"
 													alt="post"
 													width="343"
@@ -710,7 +710,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_11.jpg"
 													alt="post"
 													width="343"
@@ -752,7 +752,7 @@
 							<div class="rt-post-overlay rt-post-overlay-md">
 								<div class="post-img">
 									<a href="single-post1.html" class="img-link">
-										<img
+										<img class="lazyload"
 											src="/images/gallery/post-xl_3.jpg"
 											alt="post-xl-3"
 											width="900"
@@ -795,7 +795,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-md_4.jpg"
 													alt="post"
 													width="343"
@@ -822,7 +822,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_7.jpg"
 													alt="post"
 													width="343"
@@ -849,7 +849,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_8.jpg"
 													alt="post"
 													width="343"
@@ -882,7 +882,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_9.jpg"
 													alt="post"
 													width="343"
@@ -909,7 +909,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_10.jpg"
 													alt="post"
 													width="343"
@@ -936,7 +936,7 @@
 									<div class="rt-post post-md style-8">
 										<div class="post-img">
 											<a href="single-post1.html">
-												<img
+												<img class="lazyload"
 													src="/images/gallery/post-grid-md_11.jpg"
 													alt="post"
 													width="343"
