--- a/themes/t4mag/layouts/partials/sidebar/popular-news.html
+++ b/themes/t4mag/layouts/partials/sidebar/popular-news.html
@@ -12,14 +12,14 @@
                 <div class="post-img">
                     <a href="{{ .Permalink }}">
                         {{ with .Param "featured_image" }}
-                        <img 
+                        <img class="lazyload" 
                             src="{{ . }}" 
                             alt="{{ $.Title }}" 
                             width="343"
                             height="250"
                         />
                         {{ else }}
-                        <img
+                        <img class="lazyload"
                             src="/images/gallery/post-sm_2.jpg"
                             alt="{{ .Title }}"
                             width="343"
