added code-copy button

--- a/themes/t4mag/layouts/partials/head.html
+++ b/themes/t4mag/layouts/partials/head.html
@@ -88,10 +88,10 @@
 	<!-- Dependency Stylesheet -->
 	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="/css/all.min.css" />
-	<link rel="stylesheet" type="text/css" href="css/animate.min.css" />
+	<link rel="stylesheet" type="text/css" href="/css/animate.min.css" />
 	<link rel="stylesheet" type="text/css" href="/css/swiper.min.css" />
 	<link rel="stylesheet" type="text/css" href="/css/magnific-popup.css" />
 
 	<!-- Site Stylesheet -->
-	<link rel="stylesheet" type="text/css" href="/css/style.css" />
+	<link rel="stylesheet" type="text/css" href="/css/master.css" />
 </head>
