--- a/themes/t4mag/static/css/master.css
+++ b/themes/t4mag/static/css/master.css
@@ -11596,3 +11596,56 @@ video {
 [data-theme="dark"] .box {
 	background-color: var(--color-dark-bg_2);
 }
+
+/* Copy Button */
+
+.highlight {
+    position: relative;
+}
+.highlight pre {
+    padding-right: 75px;
+}
+.highlight-copy-btn {
+    position: absolute;
+    bottom: 7px;
+    right: 7px;
+    border: 0;
+    border-radius: 4px;
+    padding: 1px;
+    font-size: 0.7em;
+    line-height: 1.8;
+    color: #fff;
+    background-color: #777;
+    min-width: 55px;
+    text-align: center;
+}
+.highlight-copy-btn:hover {
+    background-color: #666;
+}
+
+
+.highlight pre {
+    padding-right: 75px;
+	background-color: #f1f1f1;
+	border-radius: 4px;
+	padding: 10px 20px;
+}
+.content pre {
+    padding: 10px 20px;
+    background: #f8f8f8;
+}
+
+code, kbd, pre, samp {
+    font-family: SFMono-Regular,Menlo,Monaco,Consolas,liberation mono,courier new,monospace;
+    font-size: 1em;
+}
+
+pre {
+    display: block;
+    font-size: 87.5%;
+    color: #212529;
+    margin-top: 0;
+    margin-bottom: 1rem;
+    overflow: auto;
+    -ms-overflow-style: scrollbar;
+}
